# libeconf

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  Makefile.am  NEWS  README.md  README.meson  TODO.md  autogen.sh  configure.ac  doxyfile  meson.build  meson.yml
bindings/python3/: econf.py  pyproject.toml
bindings/python3/docs/: python-libeconf.1  python-libeconf.3
bindings/python3/econf/: __init__.py  econf.py
bindings/python3/test/: test_econf.py  test_econf_getters.py  test_econf_getters_def.py  test_econf_setters.py
bindings/python3/test/testdata/examples/: invalid.conf
doc/: CMakeLists.txt  Doxyfile.in  layout.xml  meson.build
doc/html/: README_8md.html  annotated.html  files.html  functions_vars.html  globals.html  globals_defs.html  globals_eval.html  globals_func.html  globals_type.html  index.html  libeconf_8h.html  libeconf_8h.js  libeconf_8h_source.html  libeconf__ext_8h.html  libeconf__ext_8h.js  libeconf__ext_8h_source.html  navtreedata.js  navtreeindex0.js  structeconf__ext__value-members.html
doc/man/: econf_comment_tag.3  econf_delimiter_tag.3  econf_errLocation.3  econf_errString.3  econf_freeArray.3  econf_freeExtValue.3  econf_freeFile.3  econf_freeFilep.3  econf_freep.3  econf_getExtValue.3  econf_getGroups.3  econf_getInt64ValueDef.3  econf_getKeys.3  econf_getPath.3  econf_getUInt64Value.3  econf_getValue.3  econf_getValueDef.3  econf_mergeFiles.3  econf_newIniFile.3  econf_newKeyFile.3  econf_readConfig.3  econf_readConfigWithCallback.3  econf_readFile.3  econf_readFileWithCallback.3  econf_setExtValue.3  econf_setInt64Value.3  econf_setValue.3  econf_set_comment_tag.3  econf_set_conf_dirs.3  econf_set_delimiter_tag.3  econf_writeFile.3  econftool.8  libeconf.3
doc/man/man3/: README.md.3  _usr_local_src_libeconf_include_.3  econf_ext_value.3  libeconf.h.3  libeconf_ext.h.3
doc/rtf/: dir_d44c64559bbebec7f509842c48db8b23.rtf  refman.rtf
lib/: CMakeLists.txt  Makefile.am  defines.h  econf_error.c  get_ext_vlaue.c  get_value_def.c  getfilecontents.c  getfilecontents.h  helpers.c  helpers.h  keyfile.c  keyfile.h  libeconf.c  libeconf.map  libeconf.pc.cmake  libeconf.pc.in  libeconf_ext.c  mergefiles.c  mergefiles.h  options.c  options.h  readconfig.c  readconfig.h
tests/: CMakeLists.txt  Makefile.am  meson.build  tst-arguments1.c  tst-arguments2.c  tst-arguments3.c  tst-arguments4.c  tst-arguments5.c  tst-checkfiles.c  tst-comments.c  tst-comments2.c  tst-delimiter-comment.c  tst-econf_errstring1.c  tst-econftool1.sh  tst-econftool_cat.sh  tst-econftool_show1.sh  tst-extvalue.c  tst-filedoesnotexit1.c  tst-freep1.c  tst-getconfdirs1.c  tst-getconfdirs3.c  tst-getconfdirs4.c  tst-getconfdirs5.c  tst-getconfdirs6.c  tst-getconfdirs7.c  tst-getconfdirs8.c  tst-getconfdirs9.c  tst-getpath.c  tst-groups1.c  tst-groups2.c  tst-groups3.c  tst-groups4.c  tst-groups5.c  tst-groups6.c  tst-logindefs1.c  tst-logindefs2.c  tst-long-name.c  tst-man-dir.c  tst-merge1.c  tst-merge2.c  (+34 more)
tests/data/append-option/: README.md
tests/data/append-option/int-append-option-append/: input.ini  output.json
tests/data/append-option/int-append-option-init/: input.ini  output.json
tests/data/append-option/int-append-option-reset/: input.ini  output.json
tests/data/append-option/int-append-option-reset-append/: input.ini  output.json
tests/data/append-option/string-append-option-append/: input.ini  output.json
tests/data/append-option/string-append-option-init/: input.ini  output.json
tests/data/append-option/string-append-option-reset/: input.ini
tests/data/append-option/string-append-option-reset-append/: input.ini  output.json
tests/data/basic-types/: input.ini  output.json
tests/tst-append-string/: input.conf
tests/tst-arguments-data/etc/: arguments.conf
tests/tst-arguments-string/etc/: arguments.conf
tests/tst-comments/: arguments.conf
tests/tst-comments2-data/: env.conf
tests/tst-econftool-data/etc/example.conf.d/: example.conf
tests/tst-getconfdirs5-data/etc/sysctl.conf.d/: getconfdir.conf
tests/tst-getconfdirs5-data/usr/etc/sysctl.d/: getconfdir.conf
tests/tst-getconfdirs6-data/etc/getconfdir.ini.d/: 1-override.ini  5-override.ini
tests/tst-getconfdirs6-data/usr/etc/getconfdir.ini.d/: getconfdir.ini
tests/tst-getconfdirs7-data/etc/lcdnetmon.conf.d/: lcd2004-ip.conf
tests/tst-getconfdirs7-data/usr/etc/: lcdnetmon.conf
tests/tst-getconfdirs8-data/etc/: getconfdir.conf
tests/tst-getconfdirs8-data/etc/getconfdir.conf.d/: 0-key3.conf  1-key3.conf
tests/tst-getconfdirs8-data/etc/getconfdir.d/: 1-key4.conf
tests/tst-getconfdirs8-data/usr/etc/: getconfdir.conf
tests/tst-getconfdirs8-data/usr/etc/getconfdir.conf.d/: 0-key3.conf  1-key1.conf  10-key2.conf
tests/tst-getconfdirs9-data/run/getconfdir.conf.d/: 1-override.conf
tests/tst-groups3-data/: groups.conf
tests/tst-groups5-data/: groups.conf
tests/tst-groups6-data/: groups.conf
tests/tst-logindefs1-data/etc/: login.defs
tests/tst-logindefs2-data/: logindefs.data
tests/tst-long-name/: test.conf
tests/tst-merge1-data/usr/etc/: tst-merge1.conf
tests/tst-merge3-data/etc/: login.defs
tests/tst-merge3-data/etc/default/: su
tests/tst-merge4-data/: data2.conf
tests/tst-merge5-data/: data1.conf  data2.conf
tests/tst-parse-error/: empty_section.conf  missing_delim.conf  text_after_section.conf
tests/tst-parse-error/etc/: missing_bracket.conf
tests/tst-parse-error/etc/missing_bracket.conf.d/: missing_bracket.conf
tests/tst-parseconfig-data/: osrelease.conf
tests/tst-python-data/: arguments.conf
tests/tst-quote1-data/: quote.conf
tests/tst-shells1-data/etc/: shells
tests/tst-shells2-data/etc/shells.d/: tcsh
tests/tst-shells2-data/usr/etc/: shells
tests/tst-shells2-data/usr/etc/shells.d/: bash  foo  (+1 more)
tests/tst-uapi-10-data/etc/bar.conf.d/: a.conf  b.conf
tests/tst-uapi-2-data/etc/foo/: bar.conf
tests/tst-uapi-4-data/run/foo/: bar.conf
tests/tst-uapi-9-data/etc/foo.d/: b.conf
tests/tst-uapi-empty_dot_d_dir/usr/etc/: environment
tests/tst-write-comments/: arguments.conf
tests/tst-write-string-data/usr/etc/: tst-string-data.conf
(+90 files in other folders)
